# word-conversion

./: .gitignore  LICENSE  README.md  convert.py  pyproject.toml
app/: run.py
app/templates/: index.html
modules/: tools.py
tests/: test_tools.py
